--- a/pug/index.pug
+++ b/pug/index.pug
@@ -3,10 +3,12 @@ html(lang='en')
   head
     meta(charset='utf8')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
-    title Tatoo Salon
-    link(rel='stylesheet', href='/assets/css/app.min.css')
+    title Chat
+    link(rel='stylesheet', href='assets/css/app.min.css')
   body
-    include layouts/test.pug
+    include layouts/header.pug
+    include layouts/content.pug
+    include layouts/footer.pug
 
 
-    script(src="/assets/js/min/script.min.js")
+    script(src="assets/js/min/script.min.js")
