--- a/pug/layouts/content.pug
+++ b/pug/layouts/content.pug
@@ -1,3 +1,13 @@
 .content
-  section
-    a(href='link' class='btn' id='add-frame') Add
+  section.s-contol
+    .row.manual
+      .col.s12
+        .center
+          .card-panel
+            ul
+              li 1. To create new chat room just click "+" at the bottom.
+              li 2. Created window can be draggable. To do so you may click <br> at the top of the window (the dark area) and move it where you want.
+    .row
+      .col.s12
+        a(href='#' class='btn-floating btn-large red btn-add' id='add-frame') 
+          i.material-icons add
