--- a/assets/sass/app.sass
+++ b/assets/sass/app.sass
@@ -1,4 +1,6 @@
-@import '0-plugins/plugins-dir'
 @import '1-base/base-dir'
 @import '2-layouts/layouts-dir'
-@import '3-modules/modules-dir'
+
+// ALWAYS AT THE END
+// MEDIA QUERIES
+@import "media"
